Closes-Bug: #1647533 - Config Pages Alignment issues
Fixed alignment issues in Config pages
 1) Alerts detail section expansion - fixed the grid column alignment
 2) Fixed the grid view alignment issues happened in Alert page due to the hidden columns.
 3) Multi selection placeholder text was cropped due to a select2 bug.
 4) Fixed the alignment of query section in the routing policy.

--- a/webroot/common/ui/css/contrail.custom.css
+++ b/webroot/common/ui/css/contrail.custom.css
@@ -993,9 +993,12 @@ p.error, p.error-text {
     text-align:right;
 }
 
-.select2-default {
-    width: auto !important;
-}
+/*Fix for the select2 placeholder text truncating issue */
+.select2-container-multi .select2-choices .select2-search-field{
+    width: 100% ;
+    }
+.select2-container-multi .select2-choices .select2-search-choice+ .select2-search-field{
+    width: auto;}
 
 .table.detailsSub td{
     border:none;
